@@ -12,6 +12,7 @@ DSE backports
  * cqlsh: fix tab completion for case-sensitive identifiers (CASSANDRA-11664)
  * Don't write shadowed range tombstone (CASSANDRA-12030)
  * Reduce contention getting instances of CompositeType (CASSANDRA-10433)
+ * Fix potential NPE for compactionstats (CASSANDRA-12462)
 
 2.1.17
  * Fix race causing infinite loop if Thrift server is stopped before it starts listening (CASSANDRA-12856)
